<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1">

    <Button
        android:text="Menu"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/return_menu"
        />

    <Button
        android:id="@+id/start_button"
        android:text="@string/Start"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="true"
        android:onClick="startBluetooth"
        />

    <Button
        android:id="@+id/search_button"
        android:text="@string/Search"
        android:layout_width="130dp"
        android:layout_height="wrap_content"

        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="searchBluetooth"
        />

    <Button
        android:id="@+id/connect_button"
        android:text="@string/Connect"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="connectBluetooth"
        />

    <Button
        android:id="@+id/discoverSvc_button"
        android:text= "@string/DiscoverServices"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="discoverServices"
        />

    <Button
        android:id="@+id/disconnect_button"
        android:text="@string/Disconnect"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="Disconnect"
        />


</LinearLayout>