<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bluecube" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:columnCount="2"
            android:rowCount="2">

            <Button
                android:id="@+id/main_button_1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="20dp"
                android:onClick="onClk_mb1"

                android:background="#48d1cc"
                android:text="@string/main_button_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/main_button_2"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:onClick="onClk_mb2"

                android:background="#4169e1"
                android:text="@string/main_button_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/main_button_3"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="7dp"
                android:onClick="onClk_mb3"

                android:background="#87cefa"
                android:text="@string/main_button_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/main_button_4"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="18dp"
                android:onClick="onClk_mb4"

                android:background="#afeeee"
                android:text="@string/main_button_4"
                android:textSize="18sp" />
        </GridLayout>


    </LinearLayout>
</FrameLayout>

<!--//</android.support.v4.widget.DrawerLayout>-->
